hdone/objects/Verification_HIT__c.object
<CustomObject>
    <description>HIts submitted to AMT for a particular Verification Setting</description>
    <fields>
        <fullName>AssignmentsApproved__c</fullName>
        <description>Count of Approved Assignments</description>
        <inlineHelpText>Count of Approved Assignments</inlineHelpText>
        <label>AssignmentsApproved</label>
        <summaryFilterItems>
            <field>Verification_Hit_Result__c.MTurk_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Verification_Hit_Result__c.Verification_HIT__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AuditSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditSetting</label>
        <referenceTo>AuditSetting__c</referenceTo>
        <relationshipLabel>Verification HITs</relationshipLabel>
        <relationshipName>Verification_HITs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <inlineHelpText>If there are any errors in generating the HIT</inlineHelpText>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIT_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Hit ID generated by AMT for the particular Hit</inlineHelpText>
        <label>HIT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hit_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Hit Deleted from AMT ?</inlineHelpText>
        <label>Hit Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Assignments_Retrieved__c</fullName>
        <label>Number of Assignments Retrieved</label>
        <summaryForeignKey>Verification_Hit_Result__c.Verification_HIT__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Assignments_Submitted__c</fullName>
        <label>Number of Assignments Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Verification HIT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Hit - {0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification HITs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>